# ChangeLog for games-fps/quake1-doe
# Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
# $Header: $

  26 Jan 2009; Michał Ziąbkowski <mziab@o2.pl> quake1-doe-1.ebuild:
  Fixed repoman errors.

  21 Jan 2009; Piotr Szymaniak <lazy_bum@o2.pl> quake1-doe-1.ebuild:
  Added die to dodoc.

  16 Mar 2008; Piotr Szymaniak <lazy_bum@o2.pl> quake1-doe-1.ebuild:
  Added experimental vispatch flag.
