@@ -1,4 +1,14 @@
+-----BEGIN PGP SIGNED MESSAGE-----
+Hash: SHA1
+
 DIST rogue_vis.tgz 786802 RMD160 3ed24ccbee121cfa41543286c2467f12ce58e04d SHA1 48dfc721c5828454d82309a27a5f2a29f70616a7 SHA256 6dd44ae5920f2cf7abee27d2953d71d46d715c5375e8a2d7d2249bd24e6a796a
-EBUILD quake1-doe-1.ebuild 1285 RMD160 ed28287abb6a12fe3f34698db148b2e42d6e36e4 SHA1 3eef5011998197b2452e18ff963361393d8ba92a SHA256 abacd90e909969ca2eadff41177e1beb437a86b737bcde4fe9bb14c4afee8314
-MISC ChangeLog 414 RMD160 98e43b3947e282fe9798fea6edabc0fbf7aab43f SHA1 f89f7c017eb6aa0d3b5d73e6b46bc26608094018 SHA256 c6974416724f611248efed40cdfd0e9d19acea305ab5ad9b8c5c28b4c528c6a6
-MISC metadata.xml 247 RMD160 e6b25bfa3980cc1cc9e732b67f457fe2a2e9863c SHA1 4353118d4852f2d7ba4ccbbbb06bbf9fcfd25d24 SHA256 883dd20701cb074b79a6a73acfa6f7e6c5a0dcafba8f506da3ac324327300d68
+EBUILD quake1-doe-1.ebuild 1291 RMD160 d70b7b58a198aa7c17ad35e366875fc63dd61e79 SHA1 5bea91130a427fe4b039f9daa86c2363064fe3a0 SHA256 dc17d5e2e13367ae77f57cd4d5a3d5045dbcb42f1fdf7ce8dd475c39d86965db
+MISC ChangeLog 554 RMD160 400b19fdef1ee1100b504775ac853654bf0e6401 SHA1 aef8f6f0a46809ee03243d1c7e9f510339b49ac7 SHA256 53e7118253ca8850a63d3a7929c907df3bd14459bf167997cbf0871f0adb4345
+MISC metadata.xml 403 RMD160 9e5bd12769014a49bbb65a86e13f2fa84abe8196 SHA1 ab5c5e4c652f2a9b0f6fb835df310e46f435f382 SHA256 4b0dbe207330f45908f74b8f33a7eba56d0c455befa302d7a3814687253f221d
+-----BEGIN PGP SIGNATURE-----
+Version: GnuPG v2.0.18 (GNU/Linux)
+
+iEYEARECAAYFAk8QpJsACgkQ9xNbxaeWTTzV6gCfXxnEe2wbGqIY87MIOBUkI2Q6
+wV8An3YEo0guPk5q7fIC91zlhTsMDXnQ
+=38mg
+-----END PGP SIGNATURE-----
