@@ -3,8 +3,12 @@
 <pkgmetadata>
 	<herd></herd>
 	<maintainer>
-		<email>lazy_bum@o2.pl</email>
+		<email>szarpaj@grubelek.pl</email>
 		<name>Piotr Szymaniak</name>
 	</maintainer>
+	<use>
+		<flag name="darkplaces">Add darkplaces engine startup script</flag>
+		<flag name='vispatch'>Adds patches for transparent water</flag>
+	</use>
 </pkgmetadata>
 
