@@ -1,6 +1,10 @@
 # ChangeLog for games-fps/quake1-doe
-# Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
+# Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
+
+  13 Jan 2012; Piotr Szymaniak <szarpaj@grubelek.pl> quake1-doe-1.ebuild,
+  metadata.xml:
+  Added cdrom to inherit line (wrt bug #398809).
 
   26 Jan 2009; Michał Ziąbkowski <mziab@o2.pl> quake1-doe-1.ebuild:
   Fixed repoman errors.
